# scada-client

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  FindScadaClient.cmake  README.md  build-cmake.bat  build-install.bat  build-vcpkg.bat  client_application.cpp  client_application.h  client_module.cmake  client_nodule.cmake  client_paths.cpp  client_utils.cpp  client_utils.h  clipboard_util.cpp  clipboard_util.h  clipboard_util_unittest.cpp  command-line.md  command_handler.h  command_handler_impl.h  command_registry.h  common.aps  common.rc  common_resources.h  component.h  component_api.h  component_api_impl.cpp  component_api_impl.h  conanfile.txt  contents_model.h  contents_observer.h  controller.h  controller_context.h  controller_delegate.h  controller_delegate_mock.h  controller_factory.cpp  controller_factory.h  (+49 more)
app/: CMakeLists.txt  app_init.cpp  app_init.h  client_application.cpp  client_application.h  client_application_modules.cpp  client_application_modules.h  client_application_unittest.cpp  common.rc  login_canceled.h  opcua_services_module.cpp  opcua_services_module.h  screenshot_data.json  screenshot_generator.cpp  startup_exception.cpp  startup_exception.h  startup_exception_unittest.cpp  string_const.h
aui/: CMakeLists.txt  color.cpp  color.h  color_win.h  dialog_service.h  dialog_service_mock.h  drag_drop_types.h  drag_drop_types_win.cc  graph.h  grid.h  handlers.h  key_codes.h  os_exchange_data.cpp  os_exchange_data.h  point.h  prompt_dialog.h  rect.h  rect_internal.h  resource_error.h  resource_error_unittest.cpp  size.h  table.h  tree.h  types.h  types_fwd.h  view_manager.h
base/: CMakeLists.txt  awaitable_promise.h  blinker.cpp  blinker.h  blinker_mock.h  client_paths.cpp  color.cpp  color.h  color_string.cpp  color_string.h  e2e_test_hooks.cpp  e2e_test_hooks.h  excel.cpp  excel.h  file_settings_store.cpp  file_settings_store.h  json.cpp  json.h  json.h.test  memory_istream.h  memory_settings_store.h  pool.h  program_options.cpp  program_options.h  promise.h  rect.h  settings_store.cpp  settings_store.h  table_reader.h  table_writer.cpp  table_writer.h  time_range.cpp  time_range.h  utils.cpp  utils.h  value_util.cpp  value_util.h  web_util.cpp  xml.h
clipboard/: CMakeLists.txt  clipboard_util.cpp  clipboard_util.h  clipboard_util_unittest.cpp  node_serialization.cpp  node_serialization.h  node_serialization_unittest.cpp
components/: CMakeLists.txt
configuration/: CMakeLists.txt  configuration_module.cpp  configuration_module.h
configuration_tree/: CMakeLists.txt  configuration_tree_component.h  configuration_tree_module.cpp  configuration_tree_module.h
controller/: CMakeLists.txt  action.h  action_manager.cpp  action_manager.h  command_handler.h  command_registry.h  command_ui_registry.cpp  command_ui_registry.h  component_api.h  component_api_impl.cpp  component_api_impl.h  contents_model.h  contents_observer.h  controller.h  controller_context.h  controller_delegate.h  controller_delegate_mock.h  controller_factory_impl.h  controller_factory_mock.h  controller_fake.h  controller_mock.h  controller_registry.cpp  controller_registry.h  file_util.cpp  file_util.h  node_id_set.h  open_context.h  selection_model.cpp  selection_model.h  time_model.h  window_definition.cpp  window_definition.h  window_definition_util.cpp  window_definition_util.h  window_definition_util_unittest.cpp  window_info.cpp  window_info.h
controls/: CMakeLists.txt  color.cpp  color.h  color_win.h  drag_drop_types_win.cc  graph.h  grid.h  handlers.h  key_codes.h  os_exchange_data.cpp  point.h  property_model.h  property_tree_model.cpp  property_tree_model.h  size.h  status_bar_model.h  table.h  tree.h  types.h
events/: CMakeLists.txt  current_event_model.h  event_module.cpp  event_module.h  event_module_unittest.cpp  event_table_model.cpp  event_table_model.h  event_table_model_unittest.cpp  event_view.cpp  event_view.h  events_component.cpp  events_component.h  historical_event_model.h  local_event_model.h  local_event_util.cpp  local_event_util.h  local_events.cpp  local_events.h  polymorphic_event_model.h
favorites/: CMakeLists.txt  add_favourites_dialog.h  favorites_module.cpp  favorites_module.h  favourites.cpp  favourites_add_url.cpp  favourites_add_url.h  favourites_add_url_unittest.cpp  favourites_component.cpp  favourites_tree_model.cpp  favourites_tree_model.h  favourites_view.cpp  favourites_view.h
graph/: CMakeLists.txt  graph_component.cpp  graph_component.h  graph_setup_dialog.cpp  graph_setup_dialog.h  graph_view.cpp  graph_view.h  graph_view_loader.h  graph_view_saver.h  graph_view_unittest.cpp  metrix_data_source.cpp  metrix_data_source.h  metrix_graph.cpp  metrix_graph.h
main_window/: CMakeLists.txt  action_manager.cpp  action_manager.h  actions.cpp  actions.h  base_main_window.cpp  base_main_window.h  configuration_commands.cpp  configuration_commands.h  configuration_commands_unittest.cpp  context_menu_model.cpp  context_menu_model.h  controller_factory.h  controller_factory_mock.h  event_dispatcher.cpp  event_dispatcher.h  initial_page.cpp  initial_page.h  main_command_context.h  main_commands.cpp  main_commands.h  main_menu_model.cpp  main_menu_model.h  main_window.cpp  main_window.h  main_window_commands.cpp  main_window_commands.h  main_window_context.h  main_window_interface.h  main_window_manager.cpp  main_window_manager.h  main_window_mock.h  main_window_module.cpp  main_window_module.h  main_window_module_unittest.cpp  main_window_qt.cpp  main_window_qt.h  main_window_ru_qt.ts  main_window_unittest.cpp  main_window_util.cpp  (+30 more)
modules/: CMakeLists.txt
modus/: CMakeLists.txt  modus_component.cpp  modus_component.h  modus_controller.h  modus_module.cpp  modus_module.h  modus_util.cpp  modus_util.h
profile/: CMakeLists.txt  page.cpp  page.h  page_layout.cpp  page_layout.h  page_layout_unittest.cpp  profile.cpp  profile.h  window_definition.cpp  window_definition.h  window_definition_util.cpp  window_definition_util.h  window_definition_util_unittest.cpp
properties/: CMakeLists.txt  (+12 more)
(+1949 files in other folders)
